커밋메시지파일 미포함

--- a/.gitignore
+++ b/.gitignore
@@ -179,4 +179,5 @@ gradle-app.setting
 
 bin/main/hibernate.cfg.xml
 
+commit
 # End of https://www.toptal.com/developers/gitignore/api/java,windows,intellij
