로깅 레벨 설정 - 기본 레벨 INFO로 설정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,5 +16,7 @@ spring:
         show_sql: 'true'
   thymeleaf:
     cache: 'false'
-
-
+  logging:
+    level:
+      root: INFO
+      org.springframework.web: INFO
