--- a/bin/main/application.yaml
+++ b/bin/main/application.yaml
@@ -16,5 +16,7 @@ spring:
         show_sql: 'true'
   thymeleaf:
     cache: 'false'
-
-
+  logging:
+    level:
+      root: INFO
+      org.springframework.web: INFO
