--- a/blog/package.json
+++ b/blog/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "flowbite": "^1.5.4",
     "react": "^17.0.2",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-query": "^3.34.11",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -36,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
