--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,21 +2,23 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-  h2:
-    console:
-      enabled: true
   profiles:
     active: local
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:userdb;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
-    username: sa
-    password:
+    url: jdbc:mysql://localhost:52000/remember
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: migu1234!
+    hikari:
+      maximum-pool-size: 20
   jpa:
     properties:
       hibernate:
         format_sql: 'true'
         show_sql: 'true'
+        hbm2ddl:
+          auto: update # validate 나 none으로 변경
+
   thymeleaf:
     cache: 'false'
   logging:
